--- a/Windexer.Core/Windexer.Core.csproj
+++ b/Windexer.Core/Windexer.Core.csproj
@@ -26,7 +26,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\Windexer.Model\Windexer.Model.csproj" />
+	  <ProjectReference Include="..\WinDexer.Model\WinDexer.Model.csproj" />
 	</ItemGroup>
 
 </Project>
