--- a/Windexer/Windexer.csproj
+++ b/Windexer/Windexer.csproj
@@ -48,7 +48,8 @@
 
     <ItemGroup>
         <!-- App Icon -->
-
+        <MauiIcon Include="Resources\AppIcon\appicon.png" />
+      
         <!-- Splash Screen -->
         <MauiSplashScreen Include="Resources\Splash\splash.png" />
 
