--- a/Windexer.Core/Windexer.Core.csproj
+++ b/Windexer.Core/Windexer.Core.csproj
@@ -19,7 +19,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+        <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.7" />
 		<PackageReference Include="Tracetool.DotNet.Api" Version="13.1.0" />
@@ -27,6 +27,14 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\WinDexer.Model\WinDexer.Model.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Platforms\Android\" />
+	  <Folder Include="Platforms\iOS\" />
+	  <Folder Include="Platforms\MacCatalyst\" />
+	  <Folder Include="Platforms\Tizen\" />
+	  <Folder Include="Platforms\Windows\" />
 	</ItemGroup>
 
 </Project>
